kafka/kafka-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-kafka-exporter
  namespace: kafka
spec:
  selector:
    app.kubernetes.io/name: kafka-exporter
  ports:
    - port: 9404
      targetPort: 9404
